--- a/.github/workflows/trigger-e2e-environment.yml
+++ b/.github/workflows/trigger-e2e-environment.yml
@@ -27,6 +27,8 @@ jobs:
     if: ${{ !contains(github.actor, 'bot') }}
     runs-on: ubuntu-22.04
     steps:
+      - run: |
+          echo "PR: ${{ github.event.pull_request.number }}"
       - uses: actions/checkout@v3
 
       - name: Get PR Information (when manually triggered)
@@ -121,9 +123,11 @@ jobs:
               throw new Error('No workflow run found.');
             }
       - name: Print link to E2E workflow run
+        env:
+          RUN_ID: ${{ steps.dispatch_e2e.outputs.runId }}
         id: print-links
         run: |
-          E2E_RUN_LINK="https://github.com/opencrvs/e2e/actions/runs/${{ steps.dispatch_e2e.outputs.runId }}"
+          E2E_RUN_LINK="https://github.com/opencrvs/e2e/actions/runs/$RUN_ID"
           DEPLOYMENT_LINK="https://${{ steps.slugify_bname.outputs.stack }}.opencrvs.dev"
 
           echo """
@@ -133,7 +137,7 @@ jobs:
 
           Web link: $DEPLOYMENT_LINK
           """ >> $GITHUB_STEP_SUMMARY
-          echo "PR: ${{ github.event.pull_request.number }}"
+
           echo "deployment_link=$DEPLOYMENT_LINK" >> $GITHUB_OUTPUT
 
       - name: Wait for Environment Deployment (Deploy Job)
@@ -143,7 +147,7 @@ jobs:
           script: |
             const owner = 'opencrvs';
             const repo = 'e2e';
-            const runId = ${{ steps.dispatch_e2e.outputs.runId }};
+            const runId = '${{ steps.dispatch_e2e.outputs.runId }}';
             const prNumber = parseInt(${{ github.event.pull_request.number }});
             let deployJobCompleted = false;
 
