--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 name: Deploy (development)
-run-name: Deploy to ${{ github.event.inputs.environment }} with reset=${{ github.event.inputs.reset }} core=${{ github.event.inputs.core-image-tag }} country config=${{ github.event.inputs.countryconfig-image-tag }}
+run-name: Deploy to ${{ inputs.environment }} with reset=${{ inputs.reset }} core=${{ inputs.core-image-tag }} country config=${{ inputs.countryconfig-image-tag }}
 on:
   workflow_dispatch:
     inputs:
@@ -25,7 +25,7 @@ on:
         default: false
 jobs:
   deploy:
-    environment: ${{ github.event.inputs.environment }}
+    environment: ${{ inputs.environment }}
     runs-on: ubuntu-24.04
     outputs:
       outcome: ${{ steps.deploy.outcome }}
@@ -43,13 +43,13 @@ jobs:
           fetch-depth: 0
           path: './${{ github.event.repository.name }}'
 
-      - name: Checkout country branch
+      - name: Checkout country branch ${{ inputs.countryconfig-image-tag }}
         working-directory: ${{ github.event.repository.name }}
-        run: git checkout ${{ github.event.inputs.countryconfig-image-tag }}
+        run: git checkout ${{ inputs.countryconfig-image-tag }}
 
-      - name: Checkout core branch
+      - name: Checkout core branch ${{ inputs.core-image-tag }}
         working-directory: opencrvs-core
-        run: git checkout ${{ github.event.inputs.core-image-tag }}
+        run: git checkout ${{ inputs.core-image-tag }}
 
       - name: Read known hosts
         working-directory: ${{ github.event.repository.name }}
@@ -78,13 +78,13 @@ jobs:
       - name: Wait for images to be available
         run: |
           while true; do
-            if docker manifest inspect ghcr.io/opencrvs/ocrvs-auth:${{ github.event.inputs.core-image-tag }}; then
+            if docker manifest inspect ghcr.io/opencrvs/ocrvs-auth:${{ inputs.core-image-tag }}; then
               break
             fi
             sleep 10
           done
           while true; do
-            if docker manifest inspect ${{ secrets.DOCKERHUB_ACCOUNT }}/${{ secrets.DOCKERHUB_REPO }}:${{ github.event.inputs.countryconfig-image-tag }}; then
+            if docker manifest inspect ${{ secrets.DOCKERHUB_ACCOUNT }}/${{ secrets.DOCKERHUB_REPO }}:${{ inputs.countryconfig-image-tag }}; then
               break
             fi
             sleep 10
@@ -102,7 +102,7 @@ jobs:
           # This includes SSH_KEY and KNOWN_HOSTS
           #
           while IFS= read -r secret; do
-            echo "$secret" >> .env.${{ github.event.inputs.environment }}
+            echo "$secret" >> .env.${{ inputs.environment }}
           done < <(
             jq -r '
               to_entries |
@@ -118,7 +118,7 @@ jobs:
           EOF)
 
           while IFS= read -r var; do
-            echo "$var" >> .env.${{ github.event.inputs.environment }}
+            echo "$var" >> .env.${{ inputs.environment }}
           done < <(
             jq -r '
               to_entries |
@@ -134,34 +134,34 @@ jobs:
         with:
           node-version-file: ${{ github.event.repository.name }}/.nvmrc
 
-      - name: Deploy to ${{ github.event.inputs.environment }}
+      - name: Deploy to ${{ inputs.environment }}
         id: deploy
         working-directory: ${{ github.event.repository.name }}
         run: |
           yarn deploy \
           --clear_data=no \
-          --environment=${{ github.event.inputs.environment }} \
+          --environment=${{ inputs.environment }} \
           --host=${{ vars.DOMAIN }} \
           --ssh_host=${{ vars.SSH_HOST || secrets.SSH_HOST }} \
           --ssh_port=${{ vars.SSH_PORT || secrets.SSH_PORT }} \
           --ssh_user=${{ secrets.SSH_USER }} \
-          --version=${{ github.event.inputs.core-image-tag }} \
-          --country_config_version=${{ github.event.inputs.countryconfig-image-tag }} \
+          --version=${{ inputs.core-image-tag }} \
+          --country_config_version=${{ inputs.countryconfig-image-tag }} \
           --replicas=${{ vars.REPLICAS }}
 
   reset:
     needs: deploy
-    if: ${{ github.event.inputs.reset == 'true' && needs.deploy.outputs.outcome == 'success' }}
+    if: ${{ inputs.reset == 'true' && needs.deploy.outputs.outcome == 'success' }}
     uses: ./.github/workflows/clear-environment.yml
     with:
-      environment: ${{ github.event.inputs.environment }}
+      environment: ${{ inputs.environment }}
     secrets: inherit
 
   seed-data:
     needs: reset
-    if: ${{ github.event.inputs.reset == 'true' && needs.reset.outputs.outcome == 'success' }}
+    if: ${{ inputs.reset == 'true' && needs.reset.outputs.outcome == 'success' }}
     uses: ./.github/workflows/seed-data.yml
     with:
-      environment: ${{ github.event.inputs.environment }}
-      core-image-tag: ${{ github.event.inputs.core-image-tag }}
+      environment: ${{ inputs.environment }}
+      core-image-tag: ${{ inputs.core-image-tag }}
     secrets: inherit
