--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
         working-directory: opencrvs-core
         run: git checkout ${{ inputs.core-image-tag }}
 
-      - name: Clarify country config image tag ${{ env.image_tag }}
+      - name: Clarify country config image tag
         id: country_config
         working-directory: ${{ github.event.repository.name }}
         if: ${{ inputs.countryconfig-image-tag == 'n/a' || inputs.countryconfig-image-tag == '' }}
@@ -61,11 +61,12 @@ jobs:
           if [ '${{ inputs.countryconfig-image-tag }}' == 'n/a' ] || [ '${{ inputs.countryconfig-image-tag }}' == '' ]
           then
             image_tag=`git log -1 --pretty=format:%h`
-            echo "You haven't provided country config image tag, using latest git hash: $image_tag"
+            echo "⚠️ You haven't provided country config image tag, using latest git hash: $image_tag"
             echo "image_tag=$image_tag" >> $GITHUB_ENV
           else
             echo "image_tag=${{ inputs.countryconfig-image-tag }}" >> $GITHUB_ENV
           fi
+          echo "Country config image tag is ${{ env.image_tag }}"
       - name: Read known hosts
         working-directory: ${{ github.event.repository.name }}
         run: |
