--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,8 @@ jobs:
           if [ '${{ inputs.countryconfig-image-tag }}' == 'n/a' ] || [ '${{ inputs.countryconfig-image-tag }}' == '' ]
           then
             image_tag=`git log -1 --pretty=format:%h`
-            message="⚠️ You haven't provided country config image tag, using latest git hash as image tag. Please make sure image with tag was built and pushed to your registry"
+            message="⚠️ You haven't provided country config image tag, using latest git hash as image tag."
+            message="$message Please make sure image with tag was built and pushed to your registry"
             echo "image_tag=$image_tag" >> $GITHUB_ENV
           else
             echo "image_tag=${{ inputs.countryconfig-image-tag }}" >> $GITHUB_ENV
