faet: link the e2e action run

--- a/.github/workflows/trigger-e2e-environment.yml
+++ b/.github/workflows/trigger-e2e-environment.yml
@@ -112,6 +112,11 @@ jobs:
               throw new Error('No workflow run found.');
             }
 
+      - name: Print link to E2E workflow run
+        id: print-links
+        run: |
+          E2E_RUN_LINK="https://github.com/opencrvs/e2e/actions/runs/${{ steps.dispatch_e2e.outputs.runId }}"
+
       - name: Wait for Environment Deployment (Deploy Job)
         uses: actions/github-script@v7
         with:
