--- a/infrastructure/server-setup/playbook.yml
+++ b/infrastructure/server-setup/playbook.yml
@@ -40,6 +40,14 @@
       tags:
         - users
 
+    - include_tasks:
+        file: tasks/security-hardening.yml
+        apply:
+          tags:
+            - security-hardening
+      tags:
+        - security-hardening
+
 - import_playbook: jump.yml
 
 - hosts: docker-manager-first:docker-workers
