--- a/infrastructure/monitoring/logstash/logstash.conf
+++ b/infrastructure/monitoring/logstash/logstash.conf
@@ -5,6 +5,11 @@ input {
 }
 
 filter {
+    # Drop ping logs with 200 status code
+    if ([message] =~ /\/ping/ and [message] =~ /200/) {
+        drop { }
+    }
+    
     mutate {
         # Docker's GELF driver want's to write into a field named
         # container_id, but Kibana and other tools read from container.id by default
