--- a/.github/workflows/seed-data.yml
+++ b/.github/workflows/seed-data.yml
@@ -38,27 +38,21 @@ jobs:
         with:
           fetch-depth: 0
           repository: 'opencrvs/opencrvs-core'
-          path: './opencrvs-core'
 
       - name: Set CORE_VERSION from inputs
-        if: ${{ inputs.core-image-tag }}
-        run: |
-          cd opencrvs-core
-          git checkout ${{ inputs.core-image-tag }}
+        if: ${{ github.event.inputs.core-image-tag }}
+        run: git checkout ${{ github.event.inputs.core-image-tag }}
+
+      - name: Use Node.js from .nvmrc
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
 
       - name: Install dependencies
-        working-directory: ./opencrvs-core
         run: yarn install
 
       - name: Seed data on given environment
-        uses: nick-fields/retry@v2
-        id: seed
-        with:
-          timeout_minutes: 10
-          max_attempts: 5
-          command: |
-            cd ./opencrvs-core
-            yarn seed:prod
+        run: yarn seed:prod
         env:
           ACTIVATE_USERS: ${{ vars.ACTIVATE_USERS }}
           GATEWAY_HOST: ${{ vars.GATEWAY_HOST }}
