--- a/infrastructure/server-setup/inventory/vpostgres-backup-prod.yml
+++ b/infrastructure/server-setup/inventory/vpostgres-backup-prod.yml
@@ -52,6 +52,11 @@ all:
           - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIEEtz5M5hYKcUehDiCm84BplV+3t1ex8DPjIsMtQEWGv cihan.m.bebek@gmail.com
         state: present
         sudoer: true
+      - name: pyry
+        ssh_keys:
+          - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIJBcrSLLdrkLrhqNQi7Uo/ZIWXb1y4kc0vGb16e2s0Jq pyry@opencrvs.org
+        state: present
+        sudoer: true
 docker-manager-first:
   hosts:
     farajaland-vpostgres-backup-prod-master:
