--- a/infrastructure/server-setup/tasks/data-partition.yml
+++ b/infrastructure/server-setup/tasks/data-partition.yml
@@ -286,3 +286,5 @@
       MONGODB_ADMIN_USER={{ mongodb_admin_username }}
       ELASTICSEARCH_ADMIN_PASSWORD={{elasticsearch_superuser_password}}
       ELASTICSEARCH_ADMIN_USER=elastic
+      POSTGRES_USER={{ postgres_user }}
+      POSTGRES_PASSWORD={{ postgres_password }}
