--- a/infrastructure/server-setup/playbook.yml
+++ b/infrastructure/server-setup/playbook.yml
@@ -71,6 +71,14 @@
         - docker
 
     - include_tasks:
+        file: tasks/override-docker-startup.yml
+        apply:
+          tags: 
+            - docker
+      tags: 
+        - docker
+
+    - include_tasks:
         file: tasks/deployment-user.yml
         apply:
           tags:
