--- a/infrastructure/docker-compose.v19-alpha-prod-deploy.yml
+++ b/infrastructure/docker-compose.v19-alpha-prod-deploy.yml
@@ -106,6 +106,7 @@ services:
       - SMTP_USERNAME=${SMTP_USERNAME}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - SMTP_SECURE=${SMTP_SECURE}
+      - V2_EVENTS=true
     deploy:
       replicas: 2
 
