--- a/.github/workflows/init-release.yml
+++ b/.github/workflows/init-release.yml
@@ -6,15 +6,15 @@
 # & Healthcare Disclaimer located at http://opencrvs.org/license.
 #
 # Copyright (C) The OpenCRVS Authors located at https://github.com/opencrvs/opencrvs-core/blob/master/AUTHORS.
-name: Release - Start a new release 
+name: Release - Start a new release
 on:
   workflow_dispatch:
     inputs:
       version:
         type: string
         required: true
-        description: "Version to release"
-  
+        description: 'Version to release'
+
 jobs:
   release_workflow:
     runs-on: ubuntu-latest
@@ -47,14 +47,47 @@ jobs:
             fi
           fi
           echo "base_branch=$base_branch" >> $GITHUB_OUTPUT
-      
+
       - name: Create a new release branch
         run: |
-          git checkout $base_branch
-          version="${{ inputs.version }}"
-          release_branch="release/$version"
-          git checkout -b $release_branch
-          git push origin $release_branch
+          REPO="${{ github.repository }}"
+          PR_BRANCH="release/${{ inputs.version }}"
+          PR_NUMBER=$(gh pr list --head "$PR_BRANCH" --repo "$REPO" --json number -q '.[0].number')
+          cd "$GITHUB_WORKSPACE"
+          if [ -f .github/TEMPLATES/RELEASE_PR_TEMPLATE.md ]; then
+            BODY=$(jq -Rs . < .github/TEMPLATES/RELEASE_PR_TEMPLATE.md)
+          else
+            BODY=$(jq -n --arg body "" '$body')
+          fi
+          echo "{\"body\": $BODY}" > body.json
+          gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github.v3+json" \
+            /repos/"$REPO"/issues/"$PR_NUMBER" \
+            --input body.json 
+          rm body.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Update version numbers and CHANGELOG
+        run: |
+          cd "$GITHUB_WORKSPACE"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-    
+          pnpm version --new-version ${{ inputs.version }} --no-git-tag-version
+          git add .
+          git commit -m "chore: update version to ${{ inputs.version }}"
+
+          sed -i '1,2d' CHANGELOG.md
+          cp CHANGELOG.md COPY_CHANGELOG.md
+          {
+            echo "# Changelog"
+            echo ""
+            echo "## ${{ inputs.version }} Release Candidate"
+            echo ""
+            cat COPY_CHANGELOG.md 
+          } > CHANGELOG.md
+          git add CHANGELOG.md
+          git commit -m "docs: update changelog for ${{ inputs.version }} release candidate"
+          git push origin "release/${{ inputs.version }}"
