--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         run: pnpm test:compilation
 
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
 
       - name: Test
         run: pnpm test
