--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "cross-env NODE_ENV=development NODE_OPTIONS=--dns-result-order=ipv4first nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
     "start:prod": "ts-node --transpile-only -r tsconfig-paths/register src/index.ts",
     "data-generator": "ts-node -r tsconfig-paths/register -T src/data-generator/index.ts",
-    "data-generator:generate-types": "graphql-codegen --config codegen.yml && yarn prettier --write src/data-generator/gateway.ts",
+    "data-generator:generate-types": "graphql-codegen --config codegen.yml && pnpm prettier --write src/data-generator/gateway.ts",
     "deploy": "bash infrastructure/deployment/deploy.sh",
     "restore-snapshot": "bash infrastructure/backups/restore-snapshot.sh",
     "snapshot": "bash infrastructure/backups/backup.sh",
