chore: add tahmid as prod user

--- a/infrastructure/server-setup/inventory/production.yml
+++ b/infrastructure/server-setup/inventory/production.yml
@@ -51,6 +51,11 @@ all:
           - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIEEtz5M5hYKcUehDiCm84BplV+3t1ex8DPjIsMtQEWGv cihan.m.bebek@gmail.com
         state: present
         sudoer: true
+      - name: tahmid
+        ssh_keys:
+          - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINUml9O5ySwPtEMD1yGEYHlf9Z3jro97NWAnM9+ew9gn tahmidrahman.dsi@gmail.com
+        state: present
+        sudoer: true
 docker-manager-first:
   hosts:
     farajaland-prod-1:
