--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,8 @@ jobs:
       - name: Checkout country branch ${{ inputs.countryconfig-image-tag }}
         if: ${{ inputs.countryconfig-image-tag != 'latest' && inputs.countryconfig-image-tag != '' }}
         working-directory: ${{ github.event.repository.name }}
-        run: git checkout ${{ inputs.countryconfig-image-tag }}
+        # FIXME: hardcoded pentest branch
+        run: git checkout pentest
       - name: Checkout core branch ${{ inputs.core-image-tag }}
         working-directory: opencrvs-core
         run: git checkout ${{ inputs.core-image-tag }}
